@@ -29,12 +29,15 @@ demandload(globals(), "pkgcore.log:logger")
 
 WeakValCache = metadata.WeakValCache
 
+_eapi_limited_atom_kls = tuple(partial(atom, eapi=x) for x in (0, 1))
+
 def generate_depset(c, key, non_package_type, s, **kwds):
     try:
         if non_package_type:
             return conditionals.DepSet(s.data.pop(key, ""), c,
                 operators={"||":boolean.OrRestriction,
                 "":boolean.AndRestriction}, **kwds)
+        kwds['element_func'] = _eapi_limited_atom_kls[s.eapi]
         return conditionals.DepSet(s.data.pop(key, ""), c, **kwds)
     except conditionals.ParseError, p:
         raise metadata_errors.MetadataException(s, str(key), str(p))
